--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -16,6 +16,7 @@ $md-max: ($md-min - 1); // Desktop
 $lg-max: ($lg-min - 1); // Large Desktop
 //=====================================CÁC BIẾN KHÔNG THAY ĐỔI GIÁ TRỊ KHI RESPONSIVE======================================
 // colors - tuỳ chỉnh
+$text-title-product: #575757;
 $white-cl:#FFF;
 $black-cl:black;
 $green-cl: #6A983C;
