--- a/src/components/CategoryHeadline/style.scss
+++ b/src/components/CategoryHeadline/style.scss
@@ -2,6 +2,8 @@
 .categoriHeadline {
     margin-left: 50px;
     display: flex;
+    width: 70%;
+    justify-content: space-around;
     .space__FH {
         border: 1px solid green;
         width: 420px;
