--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -1,5 +1,6 @@
 @import '../../assets/css/style.scss';
 .footer {
+    margin-top: 128px;
     .container-fluid {
         .footer__top {
             display: flex;
