--- a/src/pages/Home/components/Slider/style.scss
+++ b/src/pages/Home/components/Slider/style.scss
@@ -1,5 +1,6 @@
 @import '../../../../assets/css/style.scss';
 .slider {
+    margin-top: 64px;
     .container-fluid {
         .sliders__list {
             &-item {
