--- a/src/pages/Home/components/BestProduct/style.scss
+++ b/src/pages/Home/components/BestProduct/style.scss
@@ -1,6 +1,8 @@
 @import '../../../../assets/css/style.scss';
 .BestSellingProduct {
+    margin-top: 64px;
     .container-fluid {
+        display: flex;
         .best__product-item {
             width: 269px;
             height: 260px;
@@ -16,6 +18,45 @@
                     color: $main-cl;
                     font-family: $o;
                     margin-bottom: 18px;
+                }
+            }
+        }
+        .list-product {
+            margin-left: 90px;
+            gap: 88px;
+            display: flex;
+            .product__item-tag {
+                >img {
+                    width: 100%;
+                }
+                .center-content {
+                    width: 260px;
+                    margin: 16px 0 16px;
+                    h3 {
+                        font-family: $p;
+                        font-size: 15px;
+                        margin-bottom: 4px;
+                    }
+                    span {
+                        color: $text-title-product;
+                    }
+                }
+                .bottom {
+                    justify-content: space-between;
+                    display: flex;
+                    .price {
+                        .top {
+                            font-size: 18px;
+                            font-weight: bold;
+                            font-family: $p;
+                        }
+                        .bottom {
+                            font-family: $p;
+                            font-size: 12px;
+                            color: red;
+                            text-decoration-line: line-through;
+                        }
+                    }
                 }
             }
         }
