--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -9,7 +9,7 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
+    cursor: pointer !important;
     font-family: $p;
     &.color {
         &-black {
