--- a/src/pages/Home/components/Slider/style.scss
+++ b/src/pages/Home/components/Slider/style.scss
@@ -9,7 +9,7 @@
                 // width: 100%;
                 // height: 300px;
                 overflow: hidden;
-                .nameandsurename {
+                .name-and-surename {
                     position: relative;
                     width: 370px;
                     min-height: 300px;
@@ -24,6 +24,9 @@
                         margin-bottom: 24px;
                         line-height: 22.5px;
                         text-align: center;
+                        text-overflow:ellipsis;
+                        overflow:hidden;
+                        // white-space:nowrap;
                     }
                     .surename {
                         text-align: center;
@@ -31,13 +34,20 @@
                         color: $font-name-slider;
                     }
                     .avatar {
-                        top: 65%;
-                        right: 45%;
-                        position: absolute;
-                        vertical-align: middle;
-                        width: 50px;
-                        height: 50px;
-                        border-radius: 50%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        width: 100%;
+                        margin-top: 16px;
+                        &-items{
+                            top: 65%;
+                            right: 45%;
+                            position: absolute;
+                            vertical-align: middle;
+                            width: 50px;
+                            height: 50px;
+                            border-radius: 50%;
+                        }
                     }
                 }
             }
